--- a/Project 3 - API Calls.ipynb
+++ b/Project 3 - API Calls.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "id": "99c10c94-65e2-40f1-a6c8-9b839b09124c",
    "metadata": {},
    "outputs": [],
@@ -214,7 +214,7 @@
        " 'original_language': 'en',\n",
        " 'original_title': 'The Matrix',\n",
        " 'overview': 'Set in the 22nd century, The Matrix tells the story of a computer hacker who joins a group of underground insurgents fighting the vast and powerful computers who now rule the earth.',\n",
-       " 'popularity': 72.465,\n",
+       " 'popularity': 67.942,\n",
        " 'poster_path': '/aOIuZAjPaRIE6CMzbazvcHuHXDc.jpg',\n",
        " 'production_companies': [{'id': 79,\n",
        "   'logo_path': '/tpFpsqbleCzEE2p5EgvUq6ozfCA.png',\n",
@@ -245,7 +245,7 @@
        " 'title': 'The Matrix',\n",
        " 'video': False,\n",
        " 'vote_average': 8.203,\n",
-       " 'vote_count': 23284}"
+       " 'vote_count': 23304}"
       ]
      },
      "execution_count": 7,
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "id": "f170a41f-1e60-4297-82e4-b7abe468ae86",
    "metadata": {},
    "outputs": [
@@ -269,9 +269,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "PG\n",
-      "PG\n",
-      "PG\n"
+      "R\n",
+      "R\n"
      ]
     }
    ],
@@ -294,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "id": "05e1b0ad-22b9-4dec-b1cc-b99ab9934e67",
    "metadata": {},
    "outputs": [
@@ -308,10 +307,11 @@
        " 'title_basics.csv.gz',\n",
        " 'title_ratings.csv.gz',\n",
        " 'tmdb_api_results_2000.json',\n",
-       " 'tmdb_api_results_2001.json']"
+       " 'tmdb_api_results_2001.json',\n",
+       " 'tmdb_results_combined.csv.gz']"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "id": "dbb803bd-2ac5-4d02-b9ed-d2192aa94d76",
    "metadata": {},
    "outputs": [
@@ -376,35 +376,31 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>tt0062336</td>\n",
+       "      <td>tt0043139</td>\n",
        "      <td>movie</td>\n",
-       "      <td>The Tango of the Widower and Its Distorting Mi...</td>\n",
-       "      <td>El tango del viudo y su espejo deformante</td>\n",
+       "      <td>Life of a Beijing Policeman</td>\n",
+       "      <td>Wo zhe yi bei zi</td>\n",
        "      <td>0</td>\n",
-       "      <td>2020</td>\n",
+       "      <td>2013</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>70</td>\n",
-       "      <td>Drama</td>\n",
+       "      <td>120</td>\n",
+       "      <td>Drama,History</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "      tconst titleType                                       primaryTitle  \\\n",
-       "0  tt0035423     movie                                     Kate & Leopold   \n",
-       "1  tt0062336     movie  The Tango of the Widower and Its Distorting Mi...   \n",
+       "      tconst titleType                 primaryTitle     originalTitle  \\\n",
+       "0  tt0035423     movie               Kate & Leopold    Kate & Leopold   \n",
+       "1  tt0043139     movie  Life of a Beijing Policeman  Wo zhe yi bei zi   \n",
        "\n",
-       "                               originalTitle  isAdult  startYear  endYear  \\\n",
-       "0                             Kate & Leopold        0       2001      NaN   \n",
-       "1  El tango del viudo y su espejo deformante        0       2020      NaN   \n",
-       "\n",
-       "   runtimeMinutes                  genres  \n",
-       "0             118  Comedy,Fantasy,Romance  \n",
-       "1              70                   Drama  "
+       "   isAdult  startYear  endYear  runtimeMinutes                  genres  \n",
+       "0        0       2001      NaN             118  Comedy,Fantasy,Romance  \n",
+       "1        0       2013      NaN             120           Drama,History  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -413,6 +409,39 @@
     "# Load in the dataframe from project part 1 as basics:\n",
     "basics = pd.read_csv('Data/title_basics.csv.gz')\n",
     "basics.head(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "010592af-f966-4e52-8315-20f9ad69547f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 86765 entries, 0 to 86764\n",
+      "Data columns (total 9 columns):\n",
+      " #   Column          Non-Null Count  Dtype  \n",
+      "---  ------          --------------  -----  \n",
+      " 0   tconst          86765 non-null  object \n",
+      " 1   titleType       86765 non-null  object \n",
+      " 2   primaryTitle    86765 non-null  object \n",
+      " 3   originalTitle   86765 non-null  object \n",
+      " 4   isAdult         86765 non-null  int64  \n",
+      " 5   startYear       86765 non-null  int64  \n",
+      " 6   endYear         0 non-null      float64\n",
+      " 7   runtimeMinutes  86765 non-null  int64  \n",
+      " 8   genres          86765 non-null  object \n",
+      "dtypes: float64(1), int64(3), object(5)\n",
+      "memory usage: 6.0+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "basics.info()"
    ]
   },
   {
@@ -425,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "id": "deb13e9d-0728-4d06-ab01-e6e5de133da6",
    "metadata": {},
    "outputs": [],
@@ -436,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "id": "4ce9f219-8686-4a0e-b057-d65ae7629e80",
    "metadata": {},
    "outputs": [],
@@ -447,14 +476,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "id": "2dc0aed2-61fe-4714-99f3-e11062830004",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4b8f20ef630e4d51a561e04b4cc5033a",
+       "model_id": "9dc52910ccd743bf82cfee6a2e45dddd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -468,12 +497,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a3a21625d04746dc96df64dbb0cc9a08",
+       "model_id": "9246631596744a7da88ff8cc6854d7be",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Movies from 2000:   0%|          | 0/2586 [00:00<?, ?it/s]"
+       "Movies from 2000:   0%|          | 0/209 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -482,12 +511,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c29367080eae4505a7c564564b44ff96",
+       "model_id": "f267d54d2d35425cb30b4bd50ea1b6d7",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Movies from 2001:   0%|          | 0/2872 [00:00<?, ?it/s]"
+       "Movies from 2001:   0%|          | 0/234 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -554,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
    "id": "29215528-97b5-42a2-a2c2-8a6a9bf11712",
    "metadata": {},
    "outputs": [
@@ -624,7 +653,7 @@
        "      <td>The Avengers</td>\n",
        "      <td>False</td>\n",
        "      <td>7.708</td>\n",
-       "      <td>28681</td>\n",
+       "      <td>28698</td>\n",
        "      <td>PG-13</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -648,7 +677,7 @@
        "      <td>The Notebook</td>\n",
        "      <td>False</td>\n",
        "      <td>7.879</td>\n",
-       "      <td>10357</td>\n",
+       "      <td>10362</td>\n",
        "      <td>PG-13</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -686,13 +715,13 @@
        "1  Behind every great love is a great story.  The Notebook  False   \n",
        "\n",
        "   vote_average vote_count certification  \n",
-       "0         7.708      28681         PG-13  \n",
-       "1         7.879      10357         PG-13  \n",
+       "0         7.708      28698         PG-13  \n",
+       "1         7.879      10362         PG-13  \n",
        "\n",
        "[2 rows x 26 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -714,7 +743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 16,
    "id": "c016b258-37c2-418d-a4ec-d14e7ddc999c",
    "metadata": {},
    "outputs": [
@@ -731,7 +760,7 @@
        "[]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -741,6 +770,14 @@
     "print(f\"- Number of errors: {len(errors)}\")\n",
     "errors"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7dc4de8b-fadc-451d-9ac5-8225023e95c2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
