--- a/Project 3 - EDA.ipynb
+++ b/Project 3 - EDA.ipynb
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 10,
    "id": "72f3128c-432f-48ef-b6db-0e0911d7324c",
    "metadata": {},
    "outputs": [],
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 11,
    "id": "90467e15-8aaf-4a60-bea0-afda991aea04",
    "metadata": {},
    "outputs": [],
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 12,
    "id": "4a69ee33-2b3a-4c9e-8b27-c0753ed63e98",
    "metadata": {},
    "outputs": [],
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 13,
    "id": "30423ef2-794a-42fb-88a2-68d03eb59da8",
    "metadata": {},
    "outputs": [
@@ -243,7 +243,7 @@
        "[2 rows x 26 columns]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 14,
    "id": "5dc428a8-2a5d-4fdf-8881-e77d8248ccb6",
    "metadata": {},
    "outputs": [
@@ -384,13 +384,113 @@
        "[2 rows x 26 columns]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df_2000.head(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "d1030621-86d6-4faf-a66e-5db2992cb5b6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 2222 entries, 0 to 2221\n",
+      "Data columns (total 26 columns):\n",
+      " #   Column                 Non-Null Count  Dtype  \n",
+      "---  ------                 --------------  -----  \n",
+      " 0   imdb_id                2222 non-null   object \n",
+      " 1   adult                  2221 non-null   float64\n",
+      " 2   backdrop_path          1034 non-null   object \n",
+      " 3   belongs_to_collection  137 non-null    object \n",
+      " 4   budget                 2221 non-null   float64\n",
+      " 5   genres                 2221 non-null   object \n",
+      " 6   homepage               88 non-null     object \n",
+      " 7   id                     2221 non-null   float64\n",
+      " 8   original_language      2221 non-null   object \n",
+      " 9   original_title         2221 non-null   object \n",
+      " 10  overview               2035 non-null   object \n",
+      " 11  popularity             2221 non-null   float64\n",
+      " 12  poster_path            1915 non-null   object \n",
+      " 13  production_companies   2221 non-null   object \n",
+      " 14  production_countries   2221 non-null   object \n",
+      " 15  release_date           2201 non-null   object \n",
+      " 16  revenue                2221 non-null   float64\n",
+      " 17  runtime                2221 non-null   float64\n",
+      " 18  spoken_languages       2221 non-null   object \n",
+      " 19  status                 2221 non-null   object \n",
+      " 20  tagline                659 non-null    object \n",
+      " 21  title                  2221 non-null   object \n",
+      " 22  video                  2221 non-null   float64\n",
+      " 23  vote_average           2221 non-null   float64\n",
+      " 24  vote_count             2221 non-null   float64\n",
+      " 25  certification          403 non-null    object \n",
+      "dtypes: float64(9), object(17)\n",
+      "memory usage: 451.5+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_2000.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "5c3fc270-836c-434c-8167-2e81d30259c0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 2305 entries, 0 to 2304\n",
+      "Data columns (total 26 columns):\n",
+      " #   Column                 Non-Null Count  Dtype  \n",
+      "---  ------                 --------------  -----  \n",
+      " 0   imdb_id                2305 non-null   object \n",
+      " 1   adult                  2304 non-null   float64\n",
+      " 2   backdrop_path          1055 non-null   object \n",
+      " 3   belongs_to_collection  122 non-null    object \n",
+      " 4   budget                 2304 non-null   float64\n",
+      " 5   genres                 2304 non-null   object \n",
+      " 6   homepage               141 non-null    object \n",
+      " 7   id                     2304 non-null   float64\n",
+      " 8   original_language      2304 non-null   object \n",
+      " 9   original_title         2304 non-null   object \n",
+      " 10  overview               2149 non-null   object \n",
+      " 11  popularity             2304 non-null   float64\n",
+      " 12  poster_path            1986 non-null   object \n",
+      " 13  production_companies   2304 non-null   object \n",
+      " 14  production_countries   2304 non-null   object \n",
+      " 15  release_date           2278 non-null   object \n",
+      " 16  revenue                2304 non-null   float64\n",
+      " 17  runtime                2304 non-null   float64\n",
+      " 18  spoken_languages       2304 non-null   object \n",
+      " 19  status                 2304 non-null   object \n",
+      " 20  tagline                645 non-null    object \n",
+      " 21  title                  2304 non-null   object \n",
+      " 22  video                  2304 non-null   float64\n",
+      " 23  vote_average           2304 non-null   float64\n",
+      " 24  vote_count             2304 non-null   float64\n",
+      " 25  certification          435 non-null    object \n",
+      "dtypes: float64(9), object(17)\n",
+      "memory usage: 468.3+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_2001.info()"
    ]
   },
   {
@@ -403,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 17,
    "id": "44837489-5cc8-42f5-8e1c-6df2cc387e09",
    "metadata": {},
    "outputs": [
@@ -623,7 +723,7 @@
        "[5 rows x 26 columns]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -636,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 18,
    "id": "101dc9cd-025d-4e5c-971e-075bbc8a7d47",
    "metadata": {},
    "outputs": [
@@ -703,7 +803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 19,
    "id": "b878a54a-3b06-43d8-b6a4-50e2de3092f4",
    "metadata": {},
    "outputs": [],
@@ -714,7 +814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 20,
    "id": "a4312b3b-f12d-42c3-8382-3046354c4ec5",
    "metadata": {},
    "outputs": [],
@@ -725,7 +825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 21,
    "id": "dd7f876c-e008-4549-ba80-80dc3335c140",
    "metadata": {},
    "outputs": [
@@ -751,7 +851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 22,
    "id": "0deca6a3-8b9e-467c-aa63-e9a400fdeefb",
    "metadata": {},
    "outputs": [
@@ -797,7 +897,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 23,
    "id": "3b034afb-06cd-4996-b4ac-0817de58b6cc",
    "metadata": {},
    "outputs": [
@@ -842,7 +942,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 24,
    "id": "5dfd726d-7192-414d-9854-dfe0eb049335",
    "metadata": {},
    "outputs": [
@@ -887,7 +987,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 25,
    "id": "29e9d2e5-f65a-4bf5-9281-9a0a902ca95d",
    "metadata": {},
    "outputs": [],
