Resubmit changes for Project 3 Part 1 & 2

--- a/Project 3 - API Calls.ipynb
+++ b/Project 3 - API Calls.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "id": "99c10c94-65e2-40f1-a6c8-9b839b09124c",
    "metadata": {},
    "outputs": [],
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "id": "28afb64c-0598-468e-8d4e-05c80f402c40",
    "metadata": {},
    "outputs": [],
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "id": "b7c7c994-4304-47a2-8cbd-592cca6b3736",
    "metadata": {},
    "outputs": [],
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "id": "cd9701a8-e0ac-4627-91e5-ac86c06b91db",
    "metadata": {},
    "outputs": [
@@ -149,7 +149,7 @@
        "dict_keys(['api-key'])"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "id": "99132d54-5314-4c91-963b-2c904140f9dc",
    "metadata": {},
    "outputs": [],
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "id": "3bf096d1-20ef-4fc9-bfb2-79728530d44d",
    "metadata": {},
    "outputs": [],
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "id": "4c290328-fc74-4d20-80a2-fdbb9136b930",
    "metadata": {},
    "outputs": [
@@ -248,7 +248,7 @@
        " 'vote_count': 23304}"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 24,
    "id": "f170a41f-1e60-4297-82e4-b7abe468ae86",
    "metadata": {},
    "outputs": [
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 25,
    "id": "05e1b0ad-22b9-4dec-b1cc-b99ab9934e67",
    "metadata": {},
    "outputs": [
@@ -301,17 +301,14 @@
      "data": {
       "text/plain": [
        "['.ipynb_checkpoints',\n",
-       " 'final_tmdb_data_2000.csv.gz',\n",
-       " 'final_tmdb_data_2001.csv.gz',\n",
        " 'title_akas.csv.gz',\n",
        " 'title_basics.csv.gz',\n",
        " 'title_ratings.csv.gz',\n",
        " 'tmdb_api_results_2000.json',\n",
-       " 'tmdb_api_results_2001.json',\n",
-       " 'tmdb_results_combined.csv.gz']"
+       " 'tmdb_api_results_2001.json']"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -325,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 26,
    "id": "dbb803bd-2ac5-4d02-b9ed-d2192aa94d76",
    "metadata": {},
    "outputs": [
@@ -400,7 +397,7 @@
        "1        0       2013      NaN             120           Drama,History  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -413,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 27,
    "id": "010592af-f966-4e52-8315-20f9ad69547f",
    "metadata": {},
    "outputs": [
@@ -454,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 28,
    "id": "deb13e9d-0728-4d06-ab01-e6e5de133da6",
    "metadata": {},
    "outputs": [],
@@ -465,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 29,
    "id": "4ce9f219-8686-4a0e-b057-d65ae7629e80",
    "metadata": {},
    "outputs": [],
@@ -476,14 +473,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 30,
    "id": "2dc0aed2-61fe-4714-99f3-e11062830004",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9dc52910ccd743bf82cfee6a2e45dddd",
+       "model_id": "7bc00419d81248d48f0753e6b30e0efd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -497,7 +494,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9246631596744a7da88ff8cc6854d7be",
+       "model_id": "81d2311acc224bdca692930c5aa3ef1f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -511,7 +508,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f267d54d2d35425cb30b4bd50ea1b6d7",
+       "model_id": "9751256ca9234b769f2bbca45f9f46e6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -583,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 31,
    "id": "29215528-97b5-42a2-a2c2-8a6a9bf11712",
    "metadata": {},
    "outputs": [
@@ -721,7 +718,7 @@
        "[2 rows x 26 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -743,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 32,
    "id": "c016b258-37c2-418d-a4ec-d14e7ddc999c",
    "metadata": {},
    "outputs": [
@@ -760,7 +757,7 @@
        "[]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
