--- a/Project 3 - DataFrames Cleaning.ipynb
+++ b/Project 3 - DataFrames Cleaning.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 63,
    "id": "fb43b563",
    "metadata": {},
    "outputs": [],
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 64,
    "id": "f38bf53c",
    "metadata": {},
    "outputs": [],
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 65,
    "id": "e09cf11e",
    "metadata": {},
    "outputs": [],
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 66,
    "id": "cdaacdbb",
    "metadata": {},
    "outputs": [],
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 67,
    "id": "0812bbbf",
    "metadata": {},
    "outputs": [],
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 68,
    "id": "9d2e2f76-bc11-4baa-ab3a-3e4cf7ac62fb",
    "metadata": {},
    "outputs": [],
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 69,
    "id": "235f069f-7d58-432f-8992-35be34050ff0",
    "metadata": {},
    "outputs": [],
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 70,
    "id": "9804eaa7-eece-42ae-b190-53cbeb577879",
    "metadata": {},
    "outputs": [
@@ -266,7 +266,7 @@
        "4  imdbDisplay             \\N               0  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 71,
    "id": "bfa84799-7f3d-4c54-a479-2527b6599aaa",
    "metadata": {},
    "outputs": [],
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 72,
    "id": "b7ce35e2-60f9-4f03-bbee-632a3080c0b7",
    "metadata": {},
    "outputs": [],
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 73,
    "id": "160c149e-08b2-4a27-a97e-eb94ba26fc7f",
    "metadata": {},
    "outputs": [
@@ -411,7 +411,7 @@
        "41                     \\N               0  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 74,
    "id": "04697070-3e9f-483c-b937-bc59a7334dd5",
    "metadata": {},
    "outputs": [],
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 75,
    "id": "efddee78-455b-41b5-9118-49c8c0746ab3",
    "metadata": {},
    "outputs": [
@@ -459,7 +459,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -495,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 76,
    "id": "c967ef57",
    "metadata": {},
    "outputs": [
@@ -529,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 77,
    "id": "77cc3d19",
    "metadata": {},
    "outputs": [
@@ -574,7 +574,7 @@
        "      <td>Carmencita</td>\n",
        "      <td>0</td>\n",
        "      <td>1894</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>\\N</td>\n",
        "      <td>1</td>\n",
        "      <td>Documentary,Short</td>\n",
        "    </tr>\n",
@@ -586,7 +586,7 @@
        "      <td>Le clown et ses chiens</td>\n",
        "      <td>0</td>\n",
        "      <td>1892</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>\\N</td>\n",
        "      <td>5</td>\n",
        "      <td>Animation,Short</td>\n",
        "    </tr>\n",
@@ -598,7 +598,7 @@
        "      <td>Pauvre Pierrot</td>\n",
        "      <td>0</td>\n",
        "      <td>1892</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>\\N</td>\n",
        "      <td>4</td>\n",
        "      <td>Animation,Comedy,Romance</td>\n",
        "    </tr>\n",
@@ -610,7 +610,7 @@
        "      <td>Un bon bock</td>\n",
        "      <td>0</td>\n",
        "      <td>1892</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>\\N</td>\n",
        "      <td>12</td>\n",
        "      <td>Animation,Short</td>\n",
        "    </tr>\n",
@@ -622,7 +622,7 @@
        "      <td>Blacksmith Scene</td>\n",
        "      <td>0</td>\n",
        "      <td>1893</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>\\N</td>\n",
        "      <td>1</td>\n",
        "      <td>Comedy,Short</td>\n",
        "    </tr>\n",
@@ -639,14 +639,14 @@
        "4  tt0000005     short        Blacksmith Scene        Blacksmith Scene   \n",
        "\n",
        "  isAdult startYear endYear runtimeMinutes                    genres  \n",
-       "0       0      1894     NaN              1         Documentary,Short  \n",
-       "1       0      1892     NaN              5           Animation,Short  \n",
-       "2       0      1892     NaN              4  Animation,Comedy,Romance  \n",
-       "3       0      1892     NaN             12           Animation,Short  \n",
-       "4       0      1893     NaN              1              Comedy,Short  "
+       "0       0      1894      \\N              1         Documentary,Short  \n",
+       "1       0      1892      \\N              5           Animation,Short  \n",
+       "2       0      1892      \\N              4  Animation,Comedy,Romance  \n",
+       "3       0      1892      \\N             12           Animation,Short  \n",
+       "4       0      1893      \\N              1              Comedy,Short  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -658,14 +658,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "31f87d64",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "110cba00",
    "metadata": {},
@@ -675,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 78,
    "id": "c2b331ad",
    "metadata": {},
    "outputs": [],
@@ -686,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 79,
    "id": "d1632fb2",
    "metadata": {},
    "outputs": [
@@ -803,7 +795,7 @@
        "4       0      1893     NaN              1              Comedy,Short  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -815,7 +807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 80,
    "id": "ce0355aa",
    "metadata": {},
    "outputs": [
@@ -834,7 +826,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -854,7 +846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 81,
    "id": "4e3e4f7c",
    "metadata": {},
    "outputs": [],
@@ -873,7 +865,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 82,
    "id": "fdb336cf",
    "metadata": {},
    "outputs": [],
@@ -884,7 +876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 83,
    "id": "619e09cf",
    "metadata": {},
    "outputs": [
@@ -903,7 +895,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -923,7 +915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 84,
    "id": "8ef7e010",
    "metadata": {},
    "outputs": [],
@@ -934,7 +926,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 85,
    "id": "959a71db",
    "metadata": {},
    "outputs": [],
@@ -945,7 +937,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 86,
    "id": "b949711a",
    "metadata": {},
    "outputs": [
@@ -1069,7 +1061,7 @@
        "672           Adventure,Fantasy  "
       ]
      },
-     "execution_count": 33,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1088,7 +1080,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 87,
    "id": "33976ec8",
    "metadata": {},
    "outputs": [],
@@ -1099,7 +1091,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 88,
    "id": "2c4eabca",
    "metadata": {},
    "outputs": [],
@@ -1109,7 +1101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 89,
    "id": "27f96963",
    "metadata": {},
    "outputs": [
@@ -1128,7 +1120,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1140,7 +1132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 90,
    "id": "c4675f92",
    "metadata": {},
    "outputs": [],
@@ -1151,7 +1143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 91,
    "id": "547e47bf",
    "metadata": {},
    "outputs": [],
@@ -1163,7 +1155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 92,
    "id": "8706688c",
    "metadata": {},
    "outputs": [],
@@ -1174,7 +1166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 93,
    "id": "500bc5d9",
    "metadata": {},
    "outputs": [
@@ -1298,7 +1290,7 @@
        "67668            122                   Drama  "
       ]
      },
-     "execution_count": 40,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1317,7 +1309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 94,
    "id": "eebc4e1f",
    "metadata": {},
    "outputs": [],
@@ -1329,7 +1321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 95,
    "id": "1def6ce5",
    "metadata": {
     "scrolled": true
@@ -1455,7 +1447,7 @@
        "86800            100    Comedy,Horror,Sci-Fi  "
       ]
      },
-     "execution_count": 42,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1466,15 +1458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "f87152da",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 96,
    "id": "62821aff",
    "metadata": {},
    "outputs": [
@@ -1495,7 +1479,7 @@
        "Name: tconst, Length: 147671, dtype: bool"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1509,7 +1493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 97,
    "id": "63e1d32d",
    "metadata": {},
    "outputs": [
@@ -1739,7 +1723,7 @@
        "[86765 rows x 9 columns]"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1752,7 +1736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 98,
    "id": "f0769122-633b-4883-830d-86e79da3f33d",
    "metadata": {},
    "outputs": [
@@ -1802,7 +1786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 99,
    "id": "85d0064c",
    "metadata": {},
    "outputs": [],
@@ -1813,7 +1797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 100,
    "id": "782b29eb",
    "metadata": {},
    "outputs": [
@@ -1826,7 +1810,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1838,7 +1822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 101,
    "id": "ddee14fc",
    "metadata": {},
    "outputs": [
@@ -1912,7 +1896,7 @@
        "4  tt0000005            6.2      2621"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1923,7 +1907,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 102,
    "id": "52a585f8",
    "metadata": {},
    "outputs": [
@@ -1944,7 +1928,7 @@
        "Name: tconst, Length: 1318073, dtype: bool"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1956,7 +1940,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 103,
    "id": "2af46c5a",
    "metadata": {},
    "outputs": [],
@@ -1966,7 +1950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 104,
    "id": "0285facb",
    "metadata": {
     "scrolled": true
@@ -2011,7 +1995,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 105,
    "id": "5c56be30",
    "metadata": {},
    "outputs": [
@@ -2043,7 +2027,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 106,
    "id": "1f9bb3a6",
    "metadata": {},
    "outputs": [
@@ -2070,7 +2054,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 107,
    "id": "4ceeb46a",
    "metadata": {},
    "outputs": [
@@ -2103,7 +2087,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 108,
    "id": "a0e88f60",
    "metadata": {},
    "outputs": [
@@ -2111,17 +2095,11 @@
      "data": {
       "text/plain": [
        "['.ipynb_checkpoints',\n",
-       " 'final_tmdb_data_2000.csv.gz',\n",
-       " 'final_tmdb_data_2001.csv.gz',\n",
-       " 'title_akas.csv.gz',\n",
-       " 'title_basics.csv.gz',\n",
-       " 'title_ratings.csv.gz',\n",
        " 'tmdb_api_results_2000.json',\n",
-       " 'tmdb_api_results_2001.json',\n",
-       " 'tmdb_results_combined.csv.gz']"
+       " 'tmdb_api_results_2001.json']"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2136,7 +2114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 109,
    "id": "f4cfc651",
    "metadata": {},
    "outputs": [],
@@ -2147,7 +2125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 110,
    "id": "356b7e2b",
    "metadata": {},
    "outputs": [],
@@ -2157,7 +2135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 111,
    "id": "9c4a67e1",
    "metadata": {},
    "outputs": [],
@@ -2167,7 +2145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 112,
    "id": "c98f9846",
    "metadata": {},
    "outputs": [
@@ -2291,7 +2269,7 @@
        "4             100    Comedy,Horror,Sci-Fi  "
       ]
      },
-     "execution_count": 59,
+     "execution_count": 112,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2304,7 +2282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 113,
    "id": "201af1dc",
    "metadata": {},
    "outputs": [],
@@ -2315,7 +2293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 114,
    "id": "134a1738-c1a9-4015-b8fc-92a22f89183b",
    "metadata": {},
    "outputs": [],
@@ -2326,7 +2304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 115,
    "id": "9a0eba2a-27cb-4302-9e5e-21a963183aa1",
    "metadata": {},
    "outputs": [],
