Final Changes for Resubmit

--- a/Project 3 - API Calls.ipynb
+++ b/Project 3 - API Calls.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "99c10c94-65e2-40f1-a6c8-9b839b09124c",
    "metadata": {},
    "outputs": [],
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "28afb64c-0598-468e-8d4e-05c80f402c40",
    "metadata": {},
    "outputs": [],
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "b7c7c994-4304-47a2-8cbd-592cca6b3736",
    "metadata": {},
    "outputs": [],
@@ -139,21 +139,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "cd9701a8-e0ac-4627-91e5-ac86c06b91db",
    "metadata": {},
    "outputs": [
     {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: '/Users/hgplo/.secret/tmdb_api.json'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn [6], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m/Users/hgplo/.secret/tmdb_api.json\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mr\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mas\u001b[39;00m f:\n\u001b[0;32m      2\u001b[0m     login \u001b[38;5;241m=\u001b[39m json\u001b[38;5;241m.\u001b[39mload(f)\n\u001b[0;32m      3\u001b[0m \u001b[38;5;66;03m## Display the keys of the loaded dict\u001b[39;00m\n",
-      "File \u001b[1;32m~\\anaconda3\\envs\\dojo-env\\lib\\site-packages\\IPython\\core\\interactiveshell.py:282\u001b[0m, in \u001b[0;36m_modified_open\u001b[1;34m(file, *args, **kwargs)\u001b[0m\n\u001b[0;32m    275\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m file \u001b[38;5;129;01min\u001b[39;00m {\u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m2\u001b[39m}:\n\u001b[0;32m    276\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[0;32m    277\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mIPython won\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mt let you open fd=\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfile\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m by default \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    278\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mas it is likely to crash IPython. If you know what you are doing, \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    279\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124myou can use builtins\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m open.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    280\u001b[0m     )\n\u001b[1;32m--> 282\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m io_open(file, \u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n",
-      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '/Users/hgplo/.secret/tmdb_api.json'"
-     ]
+     "data": {
+      "text/plain": [
+       "dict_keys(['api-key'])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -165,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "id": "99132d54-5314-4c91-963b-2c904140f9dc",
    "metadata": {},
    "outputs": [],
@@ -183,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "id": "3bf096d1-20ef-4fc9-bfb2-79728530d44d",
    "metadata": {},
    "outputs": [],
@@ -194,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "id": "4c290328-fc74-4d20-80a2-fdbb9136b930",
    "metadata": {},
    "outputs": [
@@ -216,7 +214,7 @@
        " 'original_language': 'en',\n",
        " 'original_title': 'The Matrix',\n",
        " 'overview': 'Set in the 22nd century, The Matrix tells the story of a computer hacker who joins a group of underground insurgents fighting the vast and powerful computers who now rule the earth.',\n",
-       " 'popularity': 67.942,\n",
+       " 'popularity': 73.311,\n",
        " 'poster_path': '/aOIuZAjPaRIE6CMzbazvcHuHXDc.jpg',\n",
        " 'production_companies': [{'id': 79,\n",
        "   'logo_path': '/tpFpsqbleCzEE2p5EgvUq6ozfCA.png',\n",
@@ -247,10 +245,10 @@
        " 'title': 'The Matrix',\n",
        " 'video': False,\n",
        " 'vote_average': 8.203,\n",
-       " 'vote_count': 23304}"
+       " 'vote_count': 23319}"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -263,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "id": "f170a41f-1e60-4297-82e4-b7abe468ae86",
    "metadata": {},
    "outputs": [
@@ -295,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "id": "05e1b0ad-22b9-4dec-b1cc-b99ab9934e67",
    "metadata": {},
    "outputs": [
@@ -305,12 +303,10 @@
        "['.ipynb_checkpoints',\n",
        " 'title_akas.csv.gz',\n",
        " 'title_basics.csv.gz',\n",
-       " 'title_ratings.csv.gz',\n",
-       " 'tmdb_api_results_2000.json',\n",
-       " 'tmdb_api_results_2001.json']"
+       " 'title_ratings.csv.gz']"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -324,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "id": "dbb803bd-2ac5-4d02-b9ed-d2192aa94d76",
    "metadata": {},
    "outputs": [
@@ -399,7 +395,7 @@
        "1        0       2013      NaN             120           Drama,History  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -412,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 11,
    "id": "010592af-f966-4e52-8315-20f9ad69547f",
    "metadata": {},
    "outputs": [
@@ -421,19 +417,19 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 86765 entries, 0 to 86764\n",
+      "RangeIndex: 86784 entries, 0 to 86783\n",
       "Data columns (total 9 columns):\n",
       " #   Column          Non-Null Count  Dtype  \n",
       "---  ------          --------------  -----  \n",
-      " 0   tconst          86765 non-null  object \n",
-      " 1   titleType       86765 non-null  object \n",
-      " 2   primaryTitle    86765 non-null  object \n",
-      " 3   originalTitle   86765 non-null  object \n",
-      " 4   isAdult         86765 non-null  int64  \n",
-      " 5   startYear       86765 non-null  int64  \n",
+      " 0   tconst          86784 non-null  object \n",
+      " 1   titleType       86784 non-null  object \n",
+      " 2   primaryTitle    86784 non-null  object \n",
+      " 3   originalTitle   86784 non-null  object \n",
+      " 4   isAdult         86784 non-null  int64  \n",
+      " 5   startYear       86784 non-null  int64  \n",
       " 6   endYear         0 non-null      float64\n",
-      " 7   runtimeMinutes  86765 non-null  int64  \n",
-      " 8   genres          86765 non-null  object \n",
+      " 7   runtimeMinutes  86784 non-null  int64  \n",
+      " 8   genres          86784 non-null  object \n",
       "dtypes: float64(1), int64(3), object(5)\n",
       "memory usage: 6.0+ MB\n"
      ]
@@ -453,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 12,
    "id": "deb13e9d-0728-4d06-ab01-e6e5de133da6",
    "metadata": {},
    "outputs": [],
@@ -464,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 13,
    "id": "4ce9f219-8686-4a0e-b057-d65ae7629e80",
    "metadata": {},
    "outputs": [],
@@ -475,14 +471,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 14,
    "id": "2dc0aed2-61fe-4714-99f3-e11062830004",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7bc00419d81248d48f0753e6b30e0efd",
+       "model_id": "69e0846ac3764b09ab11c04a289937db",
        "version_major": 2,
        "version_minor": 0
       },
@@ -496,12 +492,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "81d2311acc224bdca692930c5aa3ef1f",
+       "model_id": "2235563f67a24348908391a75fa0c834",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Movies from 2000:   0%|          | 0/209 [00:00<?, ?it/s]"
+       "Movies from 2000:   0%|          | 0/1449 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -510,12 +506,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9751256ca9234b769f2bbca45f9f46e6",
+       "model_id": "5c7f84712b0d43f49b2131177944847b",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Movies from 2001:   0%|          | 0/234 [00:00<?, ?it/s]"
+       "Movies from 2001:   0%|          | 0/1570 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -582,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 15,
    "id": "29215528-97b5-42a2-a2c2-8a6a9bf11712",
    "metadata": {},
    "outputs": [
@@ -652,7 +648,7 @@
        "      <td>The Avengers</td>\n",
        "      <td>False</td>\n",
        "      <td>7.708</td>\n",
-       "      <td>28698</td>\n",
+       "      <td>28710</td>\n",
        "      <td>PG-13</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -676,7 +672,7 @@
        "      <td>The Notebook</td>\n",
        "      <td>False</td>\n",
        "      <td>7.879</td>\n",
-       "      <td>10362</td>\n",
+       "      <td>10371</td>\n",
        "      <td>PG-13</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -714,13 +710,13 @@
        "1  Behind every great love is a great story.  The Notebook  False   \n",
        "\n",
        "   vote_average vote_count certification  \n",
-       "0         7.708      28698         PG-13  \n",
-       "1         7.879      10362         PG-13  \n",
+       "0         7.708      28710         PG-13  \n",
+       "1         7.879      10371         PG-13  \n",
        "\n",
        "[2 rows x 26 columns]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -742,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 16,
    "id": "c016b258-37c2-418d-a4ec-d14e7ddc999c",
    "metadata": {},
    "outputs": [
@@ -759,7 +755,7 @@
        "[]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
