--- a/Project 3 - API Calls.ipynb
+++ b/Project 3 - API Calls.ipynb
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "28afb64c-0598-468e-8d4e-05c80f402c40",
    "metadata": {},
    "outputs": [],
@@ -132,7 +132,10 @@
   {
    "cell_type": "markdown",
    "id": "0d2ec502-e487-4426-878c-f099fe62e97f",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "## API Call"
    ]
